Changed forward slash to pound symbols

--- a/Desktop/NYCDA/day6.html
+++ b/Desktop/NYCDA/day6.html
@@ -19,9 +19,9 @@
       </h1>
     <div>
       </div>
-      <a href="/">first</a>
-      <a href="/">/second</a>
-      <a href="/">third</a>
+      <a href="#">first</a>
+      <a href="#">/second</a>
+      <a href="#">third</a>
    </nav>
    <main>
         
